<resources>
    <string name="app_name">AppTerapiaDemencia</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email

        completions."
    </string>
    <string name="abecedario">abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZáéíóuÁÉÍÓÚ</string>
    <string name="logo_txt">APLICACIÓN MÓVIL ESPECIALIZADA EN LA ASISTENCIA DE INVOLUCRADOS EN LA TERAPIA DE ESTIMULACIÓN COGNITIVA DE ADULTOS MAYORES CON DEMENCIA EN DIVERSAS ETAPAS</string>
    <string name="logo_txt2">Aplicación Móvil Especializada En La Asistencia DE Involucrados En La Terapia De Estimulación Cognitiva De Adultos Mayores Con Demencia Senil En Diversas Etapas</string>
    <string name="logo_txt3">Aplicación Móvil para realizar Terapia de reminiscencia en Instituciones Geriátricas</string>
    <string name="Titulo_aplicacion">Aplicación Para Terapia Demencia</string>
    <string name="txt_choose_user">Elige una opción dependiendo de tu perfil</string>
    <string name="txt_or_choose">---------- O Eres --------</string>
    <string name="btn_soycuidador">Cuidador (Acceso de Invitado)</string>
    <string name="btn_soysupervisor">Supervisor de Cuidadores o Terapeuta Cognitivo</string>
    <string name="btn_salir">Salir</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_entrar">Entrar</string>
    <string name="error_loguin">Su Usuario y Contraseña NO Son Correctos</string>
    <string name="too_many_tries">Si no recuerdas tu usuario y/o contraseña, puedes crear otro registrándote</string>
    <string name="btn_irRegistro">Regístrate</string>
    <string name="dialog_succes_title">Te has registrado!</string>
    <string name="dialog_succes_content">Se ha registrado correctamente, ingrese de nuevo sus datos</string>
    <string name="dialog_succes_agree">Entiendo</string>
    <string name="dialog_sucess_agree2">Esta Bien</string>
    <string name="input_empty_username">El campo: nombre de usuario esta vacío</string>
    <string name="input_empty_password">El campo: contraseña esta vacío</string>
    <string name="input_empty_both">Los campos: nombre de usuario y contraseña estan vacíos</string>
    <string name="title_register">Registro</string>
    <string name="btn_save">Guardar</string>
    <string name="txt_register_instructions">Por favor, Complete los siguientes datos :</string>
    <string name="txt_password_short">La contraseña Es muy corta, Debe Tener Minimo 8 Caracteres</string>
    <string name="txt_name_short">Nombre muy corto, debe tener al menos 6 letras</string>
    <string name="txt_username_short">Nombre muy corto, debe tener al menos 5 caracteres</string>
    <string name="txt_password_specialcharacter">Use unicamente letras y numeros</string>
    <string name="txt_username_specialcharacter">Use unicamente letras del abecedario</string>
    <string name="txt_name_specialcharacter">El nombre completo debe Contener Unicamente Letras</string>
    <string name="hint_username_supervisor">Nombre de usuario que te identifique*</string>
    <string name="hint_complename_supervisor">Nombre completo*</string>
    <string name="hint_password_supervisor">Tu contraseña (Minimo 8 caracteres)*</string>
    <string name="hint_password_supervisor_aprobar">Contraseña de un supervisor anteriormente registrado</string>
    <string name="register_mode">Eliga su cargo en la institución*</string>
    <string name="back_login">Regresar al inicio de sesión</string>
    <string name="txt_error_syntaxis">Has usado caracteres (*,/,?) no permitidos, por favor revisa tus datos</string>
    <string name="dialog_register_error_title">No fue posible registrarse</string>
    <string name="dialog_register_error_content">Intente cambiando el nombre de usuario</string>
    <string name="dialog_register_error_agree">Entiendo</string>
    <string name="dialog_register_emptyinput_title">Faltan campos</string>
    <string name="dialog_register_emptyinput_content">Debe completar todos los campos</string>
    <string name="dialog_register_short_title">Hay Campos No Válidos</string>
    <string name="dialog_register_short_content">Revise si hay campos que no cumplen el mínimo de caracteres</string>
    <string name="dialog_register_sintaxis_title">Hay Campos No Válidos</string>
    <string name="dialog_register_sintaxis_content">Revise si hay campos con caracteres no válidos (*,"",?,/..)</string>
    <string name="dialog_register_error_aprobal_title">El último campo no es válido</string>
    <string name="dialog_register_error_aprobal_content">Pídale a un supervisor registrado que digite su contraseña de nuevo</string>
    <string name="title_section1">Lista de pacientes</string>
    <string name="title_section2">Notificaciones</string>
    <string name="title_section3">Tips para el cuidador </string>
    <string name="title_section4">Perfil de paciente</string>
    <string name="title_section5">Ayuda</string>
    <string name="title_section6">Salir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuraciones del sistema</string>
    <string name="action_example">Example action</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="tab_pager_ficha">Ficha</string>
    <string name="tab_pager_notas">Notas</string>
    <string name="tab_pager_terapia">Terapia Cognitiva</string>
    <string name="title_notifications">Aqui puedes Aprobar las notas ingresadas por tus cuidadores</string>
    <string name="aprobe_note">Eliga si desea aprobar o eliminar la nota?</string>
    <string name="txt_notifications_empty_title">No hay Notas por Aprobar</string>
    <string name="txt_tips_supervisor">Aqui puedes Agregar Tips o recomendaciones para los cuidadores de la institución</string>
    <string name="txt_tips_cuidador">Aqui puedes ver los Tips o recomendaciones que han dejado tus supervisores</string>
    <string name="toast_like">Te gusta el Tip</string>
    <string name="txt_tips_empty_title">No hay Tips Registrados</string>
    <string name="txt_tips_empty_description">Presionando el botón rojo puede agregar un Tip o recomendación para tus cuidadores, asi compartes conocimiento!</string>
    <string name="dialog_reminiscence_empty_title">Debes Especificar Un Título</string>
    <string name="txt_reminiscence_empty_title">Lista De Ejercicios de Reminiscencia Vacia</string>
    <string name="item_list_reminiscence_autor">Autor: </string>
    <string name="txt_reminiscence_empty_descripcion">No se han creado ejercicios de reminiscencia por el momento. Puede agregar uno pulsando el botón rojo de la esquina inferior derecha</string>
    <string name="txt_find_patient">Busque por Nombre...</string>
    <string name="spinner_vision">Limitación de Visión</string>
    <string name="spinner_escritura">Limitación de Escritura</string>
    <string name="spinner_dibujo">Limitación de Dibujo</string>
    <string name="txt_patient_name">Nombre Paciente (Obligatorio)</string>
    <string name="txt_patient_identity">Documento de Identidad (Obligatorio)</string>
    <string name="txt_patient_formato_fecha">DD/MM/AAAA</string>
    <string name="txt_patient_eps">Entidad Prestadora de Salud</string>
    <string name="txt_patient_antecedents">Antecedentes</string>
    <string name="txt_patient_antecedents_edt">Ingrese los Antecedentes del paciente..</string>
    <string name="txt_patient_syndromes">Síndromes</string>
    <string name="txt_patient_syndromes_edt">Ingrese Síndromes...</string>
    <string name="txt_patient_observaciones">Observaciones</string>
    <string name="txt_patient_observaciones_edt">Ingrese las Observaciones que desee</string>
    <string name="txt_alteracionesauditivas">Alteraciones Auditivas</string>
    <string name="txt_alteracionesextremidades">Alteraciones de las Extremidades</string>
    <string name="txt_addpatient_fechanacimiento">Fecha de Nacimiento (Obligatorio)</string>
    <string name="txt_addpatient_sexo">Sexo</string>
    <string name="txt_addpatient_femenino">Femenino</string>
    <string name="txt_addpatient_masculino">Masculino</string>
    <string name="title_AIVD">Evalue las siguientes Actividades Instrumentales de La Vida Diaria:</string>
    <string name="tab_AIVD">Establezca de manera preelimnar los siguientes items relacionados a Actividades Instrumentales de la Vida Diaria (AIVD)</string>
    <string name="textview_profile_information">INFORMACIÓN DEL PACIENTE</string>
    <string name="textview_profile_physics">LIMITACIONES DEL PACIENTE</string>
    <string name="txt_back_principal">Ficha de Paciente</string>
    <string name="txt_info_listpatients">Aquí puedes registrar pacientes. Además, ingresando en cada uno, puedes: \n
        1. Conocer detalles e indicadores (AIVD, Demencia, Riesgo Caidas)\n
        2. Ingresar notas y eventos\n
        3. Realizar terapias de reminiscencia o evocación a través de ejercicios creados en la seccion "Ejercicios de reminiscencia"</string>
    <string name="title_note_added">Evento Registrado</string>
    <string name="content_note_added">El Evento será notificado a los supervisores para su aprobación</string>
    <string name="blessed_no_demencia">No presenta demencia por el momento</string>
    <string name="blessed_sospecha_demencia">Hay sospecha de Demencia en el Paciente</string>
    <string name="blessed_moderadagrave_demencia">Es altamente probable que el paciente tenga Demencia en etapa moderada o grave</string>
    <string name="add_movilidad">Movilidad y\nDeambulación</string>
    <string name="add_caida">Caida o Fractura\n</string>
    <string name="add_alimentacion">Hábitos de\n Alimentación</string>
    <string name="add_health">Estado de \n Ánimo</string>
    <string name="add_changebehaviour">Personalidad \ny Conducta</string>
    <string name="add_medication">Medicación</string>
    <string name="addnote_higiene">Higiene y\nAseo</string>
    <string name="addnote_vestimenta">Vestimenta</string>
    <string name="addnote_lenguaje">Lenguaje</string>
    <string name="addnote_memoria">Memoria</string>
    <string name="addnote_instrumentales">Actividades \nInstrumentales</string>
    <string name="addnote_orientacion">Orientación</string>
    <string name="notelist_banner_tips">Los signos, sintomas y eventos relacionados a la demencia senil que puedes ingresar son:</string>
    <string name="txt_rutina_graficas">Estadisticas Generales</string>
    <string name="txt_rutina_estado">Rutinas de terapias de reminisencia O evocación.

    </string>
    <string name="txt_ultima_rutina">Ùltima Rutina</string>
    <string name="txt_ultima_rutina_estado">Estado :</string>
    <string name="txt_ultima_rutina_autor">Iniciado por :</string>
    <string name="txt_ultima_rutina_count">Cantidad de Ejercicios Completados :</string>
    <string name="txt_ultima_rutina_fecha">Fecha Iniciación :</string>
    <string name="btn_reiniciar">Continuar</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="btn_historial">Ver Historial</string>
    <string name="btn_nuevo">Nueva Rutina</string>
    <string name="btn_cognitive_ver">VER</string>
    <string name="txt_mmse">Minimental MMSE Inicial</string>
</resources>