<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/item_navigation_drawer_listapacientes"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/title_section1" />
        <item
            android:id="@+id/item_navigation_drawer_notificaciones"
            android:icon="@drawable/ic_action_toggle_star"
            android:title="@string/title_section2" />

        <item
            android:id="@+id/item_navigation_drawer_tips"
            android:title=
                "@string/title_section3" >


        </item>


        <item
            android:id="@+id/item_navigation_drawer_perfilusuario"
            android:icon="@drawable/ic_action_toggle_star"
            android:title="@string/title_section4" />
        <item
            android:id="@+id/item_navigation_drawer_ayuda"
            android:icon="@drawable/ic_action_toggle_star"
            android:title="@string/title_section5" />
        <item
            android:id="@+id/item_navigation_drawer_salir"
            android:icon="@drawable/ic_action_toggle_star"
            android:title="@string/title_section6" />


    </group>

</menu>